syntax = "proto3";

package app.improving.gateway;

import "app/improving/event/view/event_all_view.proto";
import "app/improving/gateway/domain/uigateway_domain.proto";
import "app/improving/product/view/product_all_view.proto";
import "app/improving/order/view/order_all_view.proto";
import "app/improving/store/view/store_all_view.proto";
import "app/improving/tenant/view/tenant_all_view.proto";
import "app/improving/organization/view/organization_all_view.proto";
import "app/improving/member/view/member_all_view.proto";
import "app/improving/member/action/member_action.proto";
import "common_api.proto";
import "kalix/annotations.proto";
import "google/api/annotations.proto";

service UiGatewayApiAction {
    option (kalix.codegen) = {
        action: { }
    };

    rpc HandlePurchaseTickets(PurchaseTicketsRequest) returns (ApiOrderIds) {
        option (google.api.http) = {
            get: "/order/purchase-ticket"
        };
    }

    rpc HandleGetAllEvents(eventcontext.AllEventsRequest) returns (eventcontext.AllEventsResult) {
        option (google.api.http) = {
            get: "/event/get-all-events"
        };
    }

    rpc HandleGetAllOrganizations(organizationcontext.AllOrganizationsRequest) returns (organizationcontext.AllOrganizationsresult) {
        option (google.api.http) = {
            get: "/organization/get-all-organizations"
        };
    }

    rpc HandleGetAllTenants(tenantcontext.GetAllTenantRequest) returns (tenantcontext.AllTenantResult) {
        option (google.api.http) = {
            get: "/tenant/get-all-tenants"
        };
    }

    rpc HandleGetAllStores(storecontext.AllStoresRequest) returns (storecontext.AllStoresResult) {
        option (google.api.http) = {
            get: "/store/get-all-stores"
        };
    }

    rpc HandleGetAllProducts(productcontext.AllProductsRequest) returns (productcontext.AllProductsResult) {
        option (google.api.http) = {
            get: "/product/get-all-products"
        };
    }

    rpc HandleGetAllMembers(membercontext.AllMembersRequest) returns (membercontext.AllMembersResult) {
        option (google.api.http) = {
            get: "/member/get-all-members"
        };
    }

    rpc HandleGetAllOrders(ordercontext.AllOrdersRequest) returns (ordercontext.AllOrdersResult) {
        option (google.api.http) = {
            get: "/orders/get-all-orders"
        };
    }

    rpc HandleGetMembersByEventTime(membercontext.member.MembersByEventTimeRequest) returns (membercontext.member.MembersByEventTimeResponse) {
        option (google.api.http) = {
            get: "/member/members-by-event-time/{given_time}"
        };
    }
}